chore: Move pages to template directory

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,9 +17,7 @@
   </header>
 
   <main id="main-container">
-    <a href="https://github.com/ParkSB">
-      <img id="github-heatmap" src="https://ghchart.rshah.org/ParkSB" alt="GitHub contribution heatmap">
-    </a>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
   </main>
 
   <script defer src="./src/ts/init.ts"></script>
