--- a/app/templates/navigation.html
+++ b/app/templates/navigation.html
@@ -1,7 +1,7 @@
 <nav>
   <a class="logo-link" href="/">
-    <h1>Title</h1>
-    <span>subtitle</span>
+    <h1><%- blogTitle %></h1>
+    <span><%- blogSubtitle %></span>
   </a>
 
   <small>
