--- a/app/templates/works.ejs
+++ b/app/templates/works.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Title</title>
+  <title><%- blogTitle %></title>
 
   <meta name="viewport" content="width=device-width, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
