feat: Implement easy configuration (#5)
* chore: Move pages to template directory

* feat: Put template  tags

* feat: Implement config system

* feat: Publish page templates

* chore: Change html template format to ejs

* feat: Integrate articles and works publisher into page publisher

* chore: Build files

* docs: Update README.md

--- a/app/templates/index.ejs
+++ b/app/templates/index.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Lorem Ipsum</title>
+  <title><%- blogTitle %></title>
 
   <meta name="viewport" content="width=device-width, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -21,7 +21,7 @@
   </main>
 
   <script defer src="./src/ts/init.ts"></script>
-  <script defer src="./src/ts/about.ts"></script>
+  <script defer src="./src/ts/index.ts"></script>
 </body>
 
 </html>
