--- a/app/templates/index.ejs
+++ b/app/templates/index.ejs
@@ -8,8 +8,9 @@
   <meta name="viewport" content="width=device-width, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="./src/css/init.css">
+  <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="../src/scss/init.scss">
+  <link rel="stylesheet" href="../src/scss/index.scss">
 </head>
 
 <body>
@@ -20,8 +21,7 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
   </main>
 
-  <script defer src="./src/ts/init.ts"></script>
-  <script defer src="./src/ts/index.ts"></script>
+  <script defer src="../src/ts/init.ts"></script>
 </body>
 
 </html>
