--- a/app/templates/work.ejs
+++ b/app/templates/work.ejs
@@ -10,9 +10,9 @@
   <meta name="viewport" content="width=device-width, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
  
-  <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="../src/css/init.css">
-  <link rel="stylesheet" href="../src/css/work.css">
+  <link rel="shortcut icon" href="../../assets/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="../../src/scss/init.scss">
+  <link rel="stylesheet" href="../../src/scss/work.scss">
 </head>
 
 <body>
@@ -34,5 +34,5 @@
     </article>
   </main>
 
-  <script defer src="../src/ts/init.ts"></script>
+  <script defer src="../../src/ts/init.ts"></script>
 </body>
