--- a/app/templates/article.ejs
+++ b/app/templates/article.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>
-    <%- title %>
+    <%- article.title %>
   </title>
 
   <meta name="viewport" content="width=device-width, user-scalable=no">
@@ -22,18 +22,49 @@
   <main id="main-container">
     <article id="article-container">
       <h1 id="article-title">
-        <%- title %>
+        <%- article.title %>
       </h1>
       <h2 id="article-subtitle">
-        <%- subtitle %>
+        <%- article.subtitle %>
       </h2>
       <time id="article-date">
-        <%- date %>
+        <%- article.date %>
       </time>
 
-      <article id="article-content-container">
-        <%- content %>
-      </article>
+      <section id="article-content-container">
+        <%- article.content %>
+      </section>
+
+      <section id="article-navigation">
+        <% if (nextArticle) { %>
+          <div class="article-navigation-item article-navigation-next">
+            <a href="/article/<%- nextArticle.id %>.html">
+              <div class="article-navigation-arrow article-navigation-next">＜</div>
+              <div class="article-navigation-content article-navigation-next">
+                <p class="article-navigation-title"><%- nextArticle.title %></p>
+                <p class="article-navigation-subtitle"><%- nextArticle.subtitle %></p>
+              </div>
+            </a>
+          </div>
+        <% } %>
+        <% if (prevArticle) { %>
+          <div class="article-navigation-item article-navigation-prev">
+            <a href="/article/<%- prevArticle.id %>.html">
+              <div class="article-navigation-arrow article-navigation-prev">＞</div>
+              <div class="article-navigation-content article-navigation-prev">
+                <p class="article-navigation-title"><%- prevArticle.title %></p>
+                <p class="article-navigation-subtitle"><%- prevArticle.subtitle %></p>
+              </div>
+            </a>
+          </div>
+        <% } %>
+      </section>
+
+      <section id="article-list-button-container">
+        <a href="/articles.html">
+          <div id="article-list-button">📚</div>
+        </a>
+      </section>
     </article>
   </main>
 
