--- a/app/templates/articles.ejs
+++ b/app/templates/articles.ejs
@@ -21,18 +21,20 @@
     <section id="articles-container">
       <ul>
         <% articles.reverse().map((article) => { %>
-        <li id="articles-list-item">
-          <a href="./article/<%= article.id %>.html">
-            <h1><%= article.title %></h1>
-            <h2><%= article.subtitle %></h2>
-            <time><%= article.date %></time>
-            <ul class="articles-tags">
-              <% article.tags.map((tag) => { %>
-              <li>#<%= tag.trim() %></li>
-              <% }) %>
-            </ul>
-          </a>
-        </li>
+          <li id="articles-list-item">
+            <a href="./article/<%= article.id %>.html">
+              <h1><%= article.title %></h1>
+              <% if (article.subtitle) { %>
+                <h2><%= article.subtitle %></h2>
+              <% } %>
+              <time><%= article.date %></time>
+              <ul class="articles-tags">
+                <% article.tags.map((tag) => { %>
+                  <li>#<%= tag.trim() %></li>
+                <% }) %>
+              </ul>
+            </a>
+          </li>
         <% }) %>
       </ul>
     </section>
