--- a/app/templates/index.ejs
+++ b/app/templates/index.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="UTF-8" />
   <title><%- blogTitle %></title>
-
-  <meta name="viewport" content="width=device-width, user-scalable=no">
+  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
