--- a/app/templates/work.ejs
+++ b/app/templates/work.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="UTF-8" />
@@ -7,7 +7,7 @@
     <%- title %>
   </title>
 
-  <meta name="viewport" content="width=device-width, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
  
   <link rel="shortcut icon" href="../../assets/favicon.ico" type="image/x-icon">
