--- a/app/templates/article.ejs
+++ b/app/templates/article.ejs
@@ -7,7 +7,7 @@
     <%- article.title %>
   </title>
 
-  <meta name="viewport" content="width=device-width, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <link rel="shortcut icon" href="../../assets/favicon.ico" type="image/x-icon">
