feat: Set font-display to swap

--- a/app/src/scss/init.scss
+++ b/app/src/scss/init.scss
@@ -7,6 +7,7 @@
   word-break: keep-all;
   font-feature-settings: normal;
   text-rendering: optimizeLegibility;
+  font-display: swap;
 }
 
 body {
