--- a/app/templates/navigation.ejs
+++ b/app/templates/navigation.ejs
@@ -1,9 +1,8 @@
 <nav>
   <a class="logo-link" href="/">
-    <h1><%- blogTitle %></h1>
-    <span><%- blogSubtitle %></span>
+    <h1>Lorem Ipsum</h1>
+    <span>lorem ipsum</span>
   </a>
-
   <small>
     <a id="about" class="info-link" href="/about.html">👀About</a> /
     <a id="works" class="info-link" href="/works.html">🔥Works</a> /
