--- a/app/templates/index.ejs
+++ b/app/templates/index.ejs
@@ -1,27 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
-  <title><%- blogTitle %></title>
+  <title>Lorem Ipsum</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="../src/scss/init.scss">
-  <link rel="stylesheet" href="../src/scss/index.scss">
+  <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
+  <link rel="preload" href="./styles/index.css" as="style">
+  <link rel="stylesheet" href="./styles/index.css">
 </head>
-
 <body>
   <header id="top-container" role="navigation">
+    <%- include(process.cwd() + '/app/templates/navigation'); %>
   </header>
-
   <main id="main-container">
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
   </main>
-
-  <script defer src="../src/ts/init.ts"></script>
 </body>
-
 </html>
