--- a/app/templates/work.ejs
+++ b/app/templates/work.ejs
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
-  <title>
-    <%- title %>
-  </title>
+  <title><%- title %></title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
- 
-  <link rel="shortcut icon" href="../../assets/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="../../src/scss/init.scss">
-  <link rel="stylesheet" href="../../src/scss/work.scss">
-</head>
 
+  <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
+  <link rel="preload" href="../styles/work.css" as="style">
+  <link rel="stylesheet" href="../styles/work.css">
+</head>
 <body>
   <header id="top-container" role="navigation">
+    <%- include(process.cwd() + '/app/templates/navigation'); %>
   </header>
-
   <main id="main-container">
     <article id="work-container">
       <h1 id="work-title">
@@ -27,12 +23,10 @@
       <h2 id="work-subtitle">
         <%- subtitle %>
       </h2>
-
       <article id="work-content-container">
         <%- content %>
       </section>
     </article>
   </main>
-
-  <script defer src="../../src/ts/init.ts"></script>
 </body>
+</html>
