--- a/app/templates/works.ejs
+++ b/app/templates/works.ejs
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
-  <title><%- blogTitle %></title>
+  <title>Works</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="../src/scss/init.scss">
-  <link rel="stylesheet" href="../src/scss/works.scss">
+  <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
+  <link rel="preload" href="./styles/works.css" as="style">
+  <link rel="stylesheet" href="./styles/works.css">
 </head>
-
 <body>
   <header id="top-container" role="navigation">
+    <%- include(process.cwd() + '/app/templates/navigation'); %>
   </header>
-
   <main id="main-container">
     <section id="works-container">
       <% works.reverse().map((work) => { %>
@@ -29,8 +27,5 @@
       <% }) %>
     </section>
   </main>
-
-  <script defer src="../src/ts/init.ts"></script>
 </body>
-
 </html>
